--- a/prj/pom.xml
+++ b/prj/pom.xml
@@ -38,7 +38,11 @@
             <artifactId>jta</artifactId>
             <version>1.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.0.0-alpha.3</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>new</finalName>
