--- a/prj/src/main/webapp/WEB-INF/web.xml
+++ b/prj/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,6 @@
 
     <servlet-mapping>
         <servlet-name>MyFirstServlet</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>*.html</url-pattern>
     </servlet-mapping>
-
 </web-app>
