--- a/JPA/BD/pom.xml
+++ b/JPA/BD/pom.xml
@@ -92,18 +92,12 @@
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
 
         <!-- https://mvnrepository.com/artifact/org.eclipse.persistence/eclipselink -->
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>eclipselink</artifactId>
-            <version>2.6.3</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.eclipse.persistence</groupId>-->
+            <!--<artifactId>eclipselink</artifactId>-->
+            <!--<version>2.6.3</version>-->
+        <!--</dependency>-->
 
-        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>4.3.11.Final</version>
-        </dependency>
 
     </dependencies>
 
