--- a/WEB/webapp2/pom.xml
+++ b/WEB/webapp2/pom.xml
@@ -128,6 +128,13 @@
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.0-b01</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>webapp2</finalName>
