--- a/WEB/webapp2/pom.xml
+++ b/WEB/webapp2/pom.xml
@@ -134,9 +134,27 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.0-b01</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
 
     </dependencies>
     <build>
-        <finalName>webapp2</finalName>
+        <pluginManagement>
+            <plugins>
+                <!--mvn tomcat7:deploy-->
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat8-maven-plugin</artifactId>
+                    <version>2.2</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
+        <finalName>testservice</finalName>
     </build>
 </project>
