--- a/JPA/newBD/pom.xml
+++ b/JPA/newBD/pom.xml
@@ -8,6 +8,13 @@
   <name>new Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.hibernate.common/hibernate-commons-annotations -->
     <dependency>
       <groupId>org.hibernate.common</groupId>
