--- a/JPA/newBD/pom.xml
+++ b/JPA/newBD/pom.xml
@@ -76,6 +76,11 @@
       <artifactId>antlr</artifactId>
       <version>2.7.7</version>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
     </dependencies>
   <build>
     <finalName>new</finalName>
