--- a/JPA/newBD/src/main/webapp/WEB-INF/web.xml
+++ b/JPA/newBD/src/main/webapp/WEB-INF/web.xml
@@ -11,13 +11,13 @@
     </servlet-mapping>
 
     <!--<servlet>-->
-        <!--<servlet-name>TariffServlet</servlet-name>-->
-        <!--<servlet-class>controllers.user.TariffServlets</servlet-class>-->
+    <!--<servlet-name>TariffServlet</servlet-name>-->
+    <!--<servlet-class>controllers.user.TariffServlets</servlet-class>-->
     <!--</servlet>-->
 
     <!--<servlet-mapping>-->
-        <!--<servlet-name>TariffServlet</servlet-name>-->
-        <!--<url-pattern>/tariff</url-pattern>-->
+    <!--<servlet-name>TariffServlet</servlet-name>-->
+    <!--<url-pattern>/tariff</url-pattern>-->
     <!--</servlet-mapping>-->
 
     <servlet>
@@ -62,7 +62,6 @@
     </servlet-mapping>
 
 
-
     <!--<servlet>-->
     <!--<servlet-name>MainPageServlet</servlet-name>-->
     <!--<servlet-class>controllers.MainPageServlet</servlet-class>-->
@@ -72,7 +71,10 @@
     <!--<servlet-name>MainPageServlet</servlet-name>-->
     <!--<url-pattern>/home/index.jsp</url-pattern>-->
     <!--</servlet-mapping>-->
-
+    <error-page>
+        <error-code>404</error-code>
+        <location>/404.jsp</location>
+    </error-page>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
