--- a/JPA/newBD/src/main/webapp/WEB-INF/web.xml
+++ b/JPA/newBD/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,16 @@
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
 
+    <!--<servlet>-->
+    <!--<servlet-name>TariffServlet</servlet-name>-->
+    <!--<servlet-class>controllers.user.TariffServlets</servlet-class>-->
+    <!--</servlet>-->
+
+    <!--<servlet-mapping>-->
+    <!--<servlet-name>TariffServlet</servlet-name>-->
+    <!--<url-pattern>/tariff</url-pattern>-->
+    <!--</servlet-mapping>-->
+
     <servlet>
         <servlet-name>userContractServlet</servlet-name>
         <servlet-class>controllers.user.UserContractServlet</servlet-class>
@@ -33,7 +43,7 @@
 
     <servlet>
         <servlet-name>TariffServlet</servlet-name>
-        <servlet-class>controllers.user.TariffServlet</servlet-class>
+        <servlet-class>controllers.user.TariffServlets</servlet-class>
     </servlet>
 
     <servlet-mapping>
@@ -51,23 +61,21 @@
         <url-pattern>/user/TariffOptions</url-pattern>
     </servlet-mapping>
 
-    <servlet>
-        <servlet-name>NewClientServlet</servlet-name>
-        <servlet-class>controllers.manager.NewClientServlet</servlet-class>
-    </servlet>
 
-    <servlet-mapping>
-        <servlet-name>NewClientServlet</servlet-name>
-        <url-pattern>/manager/NewClient</url-pattern>
-    </servlet-mapping>
+    <!--<servlet>-->
+    <!--<servlet-name>MainPageServlet</servlet-name>-->
+    <!--<servlet-class>controllers.MainPageServlet</servlet-class>-->
+    <!--</servlet>-->
 
+    <!--<servlet-mapping>-->
+    <!--<servlet-name>MainPageServlet</servlet-name>-->
+    <!--<url-pattern>/home/index.jsp</url-pattern>-->
+    <!--</servlet-mapping>-->
     <error-page>
         <error-code>404</error-code>
         <location>/404.jsp</location>
     </error-page>
-
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
-
 </web-app>
