--- a/JPA/newBD/src/main/webapp/WEB-INF/web.xml
+++ b/JPA/newBD/src/main/webapp/WEB-INF/web.xml
@@ -65,6 +65,11 @@
         <error-code>404</error-code>
         <location>/404.jsp</location>
     </error-page>
+
+    <error-page>
+        <error-code>500</error-code>
+        <location>/login</location>
+    </error-page>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
