--- a/JPA/newBD/src/main/webapp/WEB-INF/web.xml
+++ b/JPA/newBD/src/main/webapp/WEB-INF/web.xml
@@ -143,6 +143,16 @@
         <url-pattern>/admin/EditTariffOption</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>ConnectionOptionServlet</servlet-name>
+        <servlet-class>controllers.admin.ConnectionOptionServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ConnectionOptionServlet</servlet-name>
+        <url-pattern>/admin/ConnectOption</url-pattern>
+    </servlet-mapping>
+
     <error-page>
         <error-code>404</error-code>
         <location>/404.jsp</location>
@@ -180,4 +190,14 @@
         <servlet-name>HelpServlet</servlet-name>
         <url-pattern>/Help</url-pattern>
     </servlet-mapping>
+
+    <!--<filter>-->
+        <!--<filter-name>MainFilter</filter-name>-->
+        <!--<filter-class>controllers.MainFilter</filter-class>-->
+    <!--</filter>-->
+    <!---->
+    <!--<filter-mapping>-->
+        <!--<filter-name>MainFilter</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
 </web-app>
