--- a/JPA/newBD/src/main/webapp/WEB-INF/web.xml
+++ b/JPA/newBD/src/main/webapp/WEB-INF/web.xml
@@ -202,10 +202,10 @@
         <location>/404.jsp</location>
     </error-page>
 
-    <error-page>
-    <error-code>500</error-code>
-    <location>/404.jsp</location>
-    </error-page>
+    <!--<error-page>-->
+    <!--<error-code>500</error-code>-->
+    <!--<location>/404.jsp</location>-->
+    <!--</error-page>-->
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
@@ -235,13 +235,4 @@
         <url-pattern>/Help</url-pattern>
     </servlet-mapping>
 
-    <!--<filter>-->
-        <!--<filter-name>MainFilter</filter-name>-->
-        <!--<filter-class>controllers.MainFilter</filter-class>-->
-    <!--</filter>-->
-    <!---->
-    <!--<filter-mapping>-->
-        <!--<filter-name>MainFilter</filter-name>-->
-        <!--<url-pattern>/*</url-pattern>-->
-    <!--</filter-mapping>-->
 </web-app>
