--- a/JPA/newBD/src/main/webapp/WEB-INF/web.xml
+++ b/JPA/newBD/src/main/webapp/WEB-INF/web.xml
@@ -56,17 +56,6 @@
         <servlet-class>servlets.admin.FindClientServlet</servlet-class>
     </servlet>
 
-    <!--<servlet-mapping>-->
-    <!--<servlet-name>FindClientServlet</servlet-name>-->
-    <!--<url-pattern>/admin/index</url-pattern>-->
-    <!--</servlet-mapping>-->
-
-
-    <!--<servlet>-->
-    <!--<servlet-name>FindClientServlet</servlet-name>-->
-    <!--<servlet-class>servlets.admin.FindClientServlet</servlet-class>-->
-    <!--</servlet>-->
-
     <servlet-mapping>
         <servlet-name>FindClientServlet</servlet-name>
         <url-pattern>/admin/FindClient</url-pattern>
@@ -202,10 +191,10 @@
         <location>/404.jsp</location>
     </error-page>
 
-    <!--<error-page>-->
-    <!--<error-code>500</error-code>-->
-    <!--<location>/404.jsp</location>-->
-    <!--</error-page>-->
+    <error-page>
+    <error-code>500</error-code>
+    <location>/404.jsp</location>
+    </error-page>
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
@@ -234,5 +223,20 @@
         <servlet-name>HelpServlet</servlet-name>
         <url-pattern>/Help</url-pattern>
     </servlet-mapping>
+
+    <filter>
+        <filter-name>LoginFilter</filter-name>
+        <filter-class>servlets.AccessControlFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>/user/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>/admin/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
