--- a/JPA/newBD/pom.xml
+++ b/JPA/newBD/pom.xml
@@ -155,11 +155,19 @@
             <version>${org.springframework-version}</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>org.aspectj</groupId>-->
+            <!--<artifactId>aspectjrt</artifactId>-->
+            <!--<version>${org.aspectj-version}</version>-->
+        <!--</dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
         <dependency>
             <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>${org.aspectj-version}</version>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.9</version>
         </dependency>
+
 
         <!-- Apache Commons DBCP -->
         <dependency>
@@ -174,7 +182,7 @@
             <artifactId>spring-orm</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
-        
+
     </dependencies>
 
     <build>
@@ -199,8 +207,7 @@
     </build>
     <properties>
         <org.springframework-version>4.3.3.RELEASE</org.springframework-version>
-        <org.aspectj-version>1.7.4</org.aspectj-version>
-        <org.slf4j-version>1.7.5</org.slf4j-version>
+        <org.aspectj-version>1.8.9</org.aspectj-version>
         <java-version>1.8</java-version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
