--- a/JPA/newBD/pom.xml
+++ b/JPA/newBD/pom.xml
@@ -170,11 +170,19 @@
 
 
         <!-- Apache Commons DBCP -->
+        <!--<dependency>-->
+            <!--<groupId>commons-dbcp</groupId>-->
+            <!--<artifactId>commons-dbcp</artifactId>-->
+            <!--<version>1.4</version>-->
+        <!--</dependency>-->
+
         <dependency>
-            <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.1.1</version>
         </dependency>
+
+
 
         <!-- Spring ORM -->
         <dependency>
@@ -201,7 +209,7 @@
             <plugin>
                 <groupId>org.wildfly.plugins</groupId>
                 <artifactId>wildfly-maven-plugin</artifactId>
-                <version>1.0.1.Final</version>
+                <version>1.1.0.Alpha11</version>
             </plugin>
         </plugins>
     </build>
