--- a/JPA/newBD/pom.xml
+++ b/JPA/newBD/pom.xml
@@ -156,9 +156,9 @@
         </dependency>
 
         <!--<dependency>-->
-            <!--<groupId>org.aspectj</groupId>-->
-            <!--<artifactId>aspectjrt</artifactId>-->
-            <!--<version>${org.aspectj-version}</version>-->
+        <!--<groupId>org.aspectj</groupId>-->
+        <!--<artifactId>aspectjrt</artifactId>-->
+        <!--<version>${org.aspectj-version}</version>-->
         <!--</dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
@@ -171,9 +171,9 @@
 
         <!-- Apache Commons DBCP -->
         <!--<dependency>-->
-            <!--<groupId>commons-dbcp</groupId>-->
-            <!--<artifactId>commons-dbcp</artifactId>-->
-            <!--<version>1.4</version>-->
+        <!--<groupId>commons-dbcp</groupId>-->
+        <!--<artifactId>commons-dbcp</artifactId>-->
+        <!--<version>1.4</version>-->
         <!--</dependency>-->
 
         <dependency>
@@ -181,7 +181,6 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>2.1.1</version>
         </dependency>
-
 
 
         <!-- Spring ORM -->
@@ -196,6 +195,7 @@
     <build>
         <testSourceDirectory>/src/tests</testSourceDirectory>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
@@ -206,11 +206,19 @@
                     <path>/</path>
                 </configuration>
             </plugin>
+
+            <!--<plugin>-->
+                <!--<groupId>org.wildfly.plugins</groupId>-->
+                <!--<artifactId>wildfly-maven-plugin</artifactId>-->
+                <!--<version>1.1.0.Alpha11</version>-->
+            <!--</plugin>-->
+
             <plugin>
-                <groupId>org.wildfly.plugins</groupId>
-                <artifactId>wildfly-maven-plugin</artifactId>
-                <version>1.1.0.Alpha11</version>
+                <groupId>org.jboss.as.plugins</groupId>
+                <artifactId>jboss-as-maven-plugin</artifactId>
+                <version>7.9.Final</version>
             </plugin>
+
         </plugins>
     </build>
     <properties>
