--- a/JPA/newBD/src/main/resources/application.properties
+++ b/JPA/newBD/src/main/resources/application.properties
@@ -5,3 +5,7 @@ jdbc.password = 214189
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = true
 hibernate.format_sql = true
+hibernate.listeners.envers.autoRegister=false
+hibernate.current_session_context_class=jta
+hibernate.transaction.jta.platform=JBossAS
+hibernate.transaction.coordinator_class=jta
