--- a/JPA/newBD/src/main/webapp/WEB-INF/web.xml
+++ b/JPA/newBD/src/main/webapp/WEB-INF/web.xml
@@ -39,6 +39,11 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/404.jsp</location>
+    </error-page>
+
     <servlet-mapping>
         <servlet-name>appServlet</servlet-name>
         <url-pattern>/</url-pattern>
