--- a/eCare/RESTClient/src/main/webapp/WEB-INF/web.xml
+++ b/eCare/RESTClient/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
   
   <!-- Welcome page -->
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>index.xhtml</welcome-file>
 	</welcome-file-list>
  
 	<!-- JSF mapping -->
